<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt3_time"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/default_long"
            android:textColor="@drawable/white" />

        <!-- <ListView -->
        <!-- android:id="@+id/list3_concentration" -->
        <!-- android:layout_width="fill_parent" -->
        <!-- android:layout_height="fill_parent" -->
        <!-- android:background="@color/translucence_black" > -->
        <!-- </ListView> -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/translucence_black"
            android:orientation="vertical" >

            <ImageView style="@style/grid_line" />

            <LinearLayout style="@style/grid_linearlayout" >

                <TextView
                    style="@style/grid_text"
                    android:text="@string/concentration_type" />

                <TextView
                    style="@style/grid_text"
                    android:text="@string/concentration_time" />

                <TextView
                    style="@style/grid_text"
                    android:text="@string/concentration_value" />
            </LinearLayout>

            <ImageView style="@style/grid_line" />

            <LinearLayout style="@style/grid_linearlayout" >

                <TextView
                    style="@style/grid_text"
                    android:text="@string/pm25_text" />

                <TextView
                    style="@style/grid_text"
                    android:text="@string/hour_1" />

                <TextView
                    android:id="@+id/txt3_pm25"
                    style="@style/grid_text"
                    android:text="@string/default_long" />
            </LinearLayout>

            <ImageView style="@style/grid_line" />

            <LinearLayout style="@style/grid_linearlayout" >

                <TextView
                    style="@style/grid_text"
                    android:text="@string/pm10_text" />

                <TextView
                    style="@style/grid_text"
                    android:text="@string/hour_1" />

                <TextView
                    android:id="@+id/txt3_pm10"
                    style="@style/grid_text"
                    android:text="@string/default_long" />
            </LinearLayout>

            <ImageView style="@style/grid_line" />

            <LinearLayout style="@style/grid_linearlayout" >

                <TextView
                    style="@style/grid_text"
                    android:text="@string/o3_text" />

                <TextView
                    style="@style/grid_text"
                    android:text="@string/hour_1" />

                <TextView
                    android:id="@+id/txt3_o3"
                    style="@style/grid_text"
                    android:text="@string/default_long" />
            </LinearLayout>

            <ImageView style="@style/grid_line" />

            <LinearLayout style="@style/grid_linearlayout" >

                <TextView
                    style="@style/grid_text"
                    android:text="@string/co_text" />

                <TextView
                    style="@style/grid_text"
                    android:text="@string/hour_1" />

                <TextView
                    android:id="@+id/txt3_co"
                    style="@style/grid_text"
                    android:text="@string/default_long" />
            </LinearLayout>

            <ImageView style="@style/grid_line" />

            <LinearLayout style="@style/grid_linearlayout" >

                <TextView
                    style="@style/grid_text"
                    android:text="@string/so2_text" />

                <TextView
                    style="@style/grid_text"
                    android:text="@string/hour_1" />

                <TextView
                    android:id="@+id/txt3_so2"
                    style="@style/grid_text"
                    android:text="@string/default_long" />
            </LinearLayout>

            <ImageView style="@style/grid_line" />

            <LinearLayout style="@style/grid_linearlayout" >

                <TextView
                    style="@style/grid_text"
                    android:text="@string/no2_text" />

                <TextView
                    style="@style/grid_text"
                    android:text="@string/hour_1" />

                <TextView
                    android:id="@+id/txt3_no2"
                    style="@style/grid_text"
                    android:text="@string/default_long" />
            </LinearLayout>

            <ImageView style="@style/grid_line" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>