<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/main_title2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#77000000"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/title_bg_color"
            android:clickable="true"
            android:padding="15dp"
            android:scaleType="centerInside"
            android:src="@drawable/title_add"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/txt2_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/options"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/title_bg_color"
            android:clickable="true"
            android:padding="15dp"
            android:scaleType="centerInside"
            android:src="@drawable/title_update"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_alter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/setting_dividing_line_color"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/setting_paddign" >

        <ImageView
            android:layout_width="@dimen/setting_size"
            android:layout_height="@dimen/setting_size"
            android:src="@drawable/yjts_ico" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/setting_marginleft"
            android:text="@string/setting_yjts"
            android:textColor="@color/option_color" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_level"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/setting_dividing_line_color"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/setting_paddign" >

        <ImageView
            android:layout_width="@dimen/setting_size"
            android:layout_height="@dimen/setting_size"
            android:src="@drawable/kqzldj_ico" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/setting_marginleft"
            android:text="@string/setting_kqzldj"
            android:textColor="@color/option_color" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_standard"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/setting_dividing_line_color"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/setting_paddign" >

        <ImageView
            android:layout_width="@dimen/setting_size"
            android:layout_height="@dimen/setting_size"
            android:src="@drawable/bzck_ico" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/setting_marginleft"
            android:text="@string/setting_ckbz"
            android:textColor="@color/option_color" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_help"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/setting_dividing_line_color"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/setting_paddign" >

        <ImageView
            android:layout_width="@dimen/setting_size"
            android:layout_height="@dimen/setting_size"
            android:src="@drawable/sybz_ico" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/setting_marginleft"
            android:text="@string/setting_sysm"
            android:textColor="@color/option_color" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_version"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/setting_dividing_line_color"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/setting_paddign" >

        <ImageView
            android:layout_width="@dimen/setting_size"
            android:layout_height="@dimen/setting_size"
            android:src="@drawable/jcxbb_ico" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/setting_marginleft"
            android:text="@string/setting_jcxbb"
            android:textColor="@color/option_color" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_about"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/setting_dividing_line_color"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/setting_paddign" >

        <ImageView
            android:layout_width="@dimen/setting_size"
            android:layout_height="@dimen/setting_size"
            android:src="@drawable/gy_ico" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/setting_marginleft"
            android:text="@string/setting_gy"
            android:textColor="@color/option_color" />
    </LinearLayout>

</LinearLayout>