<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt2_aqi_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/aqi_24hour_trend"
        android:textColor="@drawable/white"
        android:textSize="@dimen/textseize_big" />

    <RadioGroup
        android:id="@+id/group_aqi_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/tab_btn"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio2_realtime"
            style="@style/aqiTabStyle"
            android:background="@drawable/radio2_left_on"
            android:checked="true"
            android:text="@string/realtime_aqi_index" />

        <RadioButton
            android:id="@+id/radio2_30day"
            style="@style/aqiTabStyle"
            android:background="@drawable/radio2_right"
            android:checked="false"
            android:text="@string/aqi_month" />
    </RadioGroup>

    <FrameLayout
        android:id="@+id/frame2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dip_10"
        android:layout_weight="1"
        android:background="@color/chart_bg_color" >

        <ProgressBar
            android:id="@+id/progress2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateDrawable="@drawable/frame_loading" />

        <RelativeLayout
            android:id="@+id/view2_realtime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible" >
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/view2_month"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible" >
        </RelativeLayout>
    </FrameLayout>

</LinearLayout>