<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <FrameLayout
        android:id="@+id/fragment_main"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </FrameLayout>

    <LinearLayout
        android:id="@+id/bottom_menu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#000000"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <LinearLayout
            android:id="@+id/btn_bottom_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bottom_bg_color"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/img1"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:scaleType="centerInside"
                android:src="@drawable/bottom_unit1" />

            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/realtime"
                android:textColor="@drawable/bottom_text_color"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_bottom_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bottom_bg_color"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/img2"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:scaleType="centerInside"
                android:src="@drawable/bottom_unit2" />

            <TextView
                android:id="@+id/txt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/history"
                android:textColor="@drawable/bottom_text_color"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_bottom_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bottom_bg_color"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/img3"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:scaleType="centerInside"
                android:src="@drawable/bottom_unit3" />

            <TextView
                android:id="@+id/txt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/concentration"
                android:textColor="@drawable/bottom_text_color"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_bottom_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bottom_bg_color"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:scaleType="centerInside"
                android:src="@drawable/bottom_unit4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/map"
                android:textColor="@drawable/bottom_text_color"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_bottom_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bottom_bg_color"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/img5"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:scaleType="centerInside"
                android:src="@drawable/bottom_unit5" />

            <TextView
                android:id="@+id/txt5"
                style="@style/bottom_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/options"
                android:textColor="@drawable/bottom_text_color"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>